--- a/Demo.DAL/Demo.DAL.csproj
+++ b/Demo.DAL/Demo.DAL.csproj
@@ -14,14 +14,13 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.15" />
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.11" />
     </ItemGroup>
 
 
 
     <ItemGroup>
       <Folder Include="Migrations\" />
-      <Folder Include="Repositories\Implementations\" />
     </ItemGroup>
 
 
