--- a/Demo.API/Demo.API.csproj
+++ b/Demo.API/Demo.API.csproj
@@ -29,4 +29,9 @@
       </Content>
     </ItemGroup>
 
+
+    <ItemGroup>
+      <Folder Include="Managers\Implementations\" />
+    </ItemGroup>
+
 </Project>
