--- a/Demo.API/Demo.API.csproj
+++ b/Demo.API/Demo.API.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Confluent.Kafka" Version="2.10.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.15"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.15">
           <PrivateAssets>all</PrivateAssets>
