--- a/Demo.API/appsettings.json
+++ b/Demo.API/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Kafka": {
+    "BootstrapServers": "localhost:29092",
+    "NewTaskTopic": "new_tasks_notifications"
+  },
   "AllowedHosts": "*"
 }
