--- a/Demo.API/appsettings.json
+++ b/Demo.API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "Kafka": {
-    "BootstrapServers": "localhost:29092",
+    "BootstrapServers": "kafka:29092",
     "NewTaskTopic": "new_tasks_notifications"
   },
   "AllowedHosts": "*"
