feat: new kafka type message

--- a/Demo.API/appsettings.json
+++ b/Demo.API/appsettings.json
@@ -7,7 +7,8 @@
   },
   "Kafka": {
     "BootstrapServers": "kafka:29092",
-    "NewTaskTopic": "new_tasks_notifications"
+    "NewTaskTopic": "new_tasks_notifications",
+    "SimpleNotificationTopic": "simple_notifications"
   },
   "AllowedHosts": "*"
 }
