--- a/Demo.API/Demo.API.csproj
+++ b/Demo.API/Demo.API.csproj
@@ -11,6 +11,7 @@
     <ItemGroup>
         <PackageReference Include="Confluent.Kafka" Version="2.10.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.15"/>
+        <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.2.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.15">
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
